Fix tiny spacing issue in code section on mobile browsers.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2712,7 +2712,7 @@ ul { list-style: square outside;}
   display: block;
   padding: 80px 15px 15px;
   width: 270px;
-  height: 180px;
+  height: 200px;
   position: relative;
 }
 .code-example h2 {
